--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/cambio_password.html.twig
@@ -1,3 +1,5 @@
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/animate.css') }}">
 <link type="text/css" rel="stylesheet" href="{{ asset('css/styles/all.css') }}">
 <link type="text/css" rel="stylesheet" href="{{ asset('css/flavr/flavr.css') }}">
@@ -31,16 +33,14 @@
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-icon,
 .flavr-container .flavr-fixer .flavr-outer .flavr-content .flavr-title {text-align: center;}
 .cambioContrasenia{line-height: 1.0;}
-.flavr-container .flavr-fixer {margin: 7% auto 0px !important;}
+.flavr-container .flavr-fixer {margin: 5% auto 0px !important;}
 
 </style>
 
 <script type="text/javascript">
 
-  $(document).ready(function(){
+  $(document).ready(function(){    
     setTimeout('login();',1000);
-
-
   });
 
 var btn_login = 0;
@@ -51,7 +51,6 @@ function recordar_pass () {
     $("#recordar_link").hide();
     $("#btn_iniciar").hide();
     $("#enviar_mail").show();
-
 }
 
 function iniciar_sesion () {
@@ -60,14 +59,12 @@ function iniciar_sesion () {
   $("#iniciar").hide();
   $("#enviar_mail").hide();
   $("#recordar_link").show();
-
-
 }
 
 function enviar_mail (user) {
 
  $.post('{{path('titulacion_sis_academico_mail')}}', {user: user}, function(data) {
-   alert(data);
+   //alert(data);
  });
 }
 
@@ -78,7 +75,7 @@ function validaContrasenia(idCaja){
 
   stringvalue = $("#"+idCaja).val();
 
-  alert(stringvalue);
+  //alert(stringvalue);
 
   if(stringvalue != ""){
   
@@ -116,17 +113,17 @@ function login(stringvalue){
           '</div>' +
           '<div class="flavr-message"> Ingrese Contraseña:</div>'+
           '<div class="form-row">' +
-          '<input id="password" type="password" name="password" maxlength="8" ' +
+          '<input id="password" type="password" name="password" ' +
           'placeholder="Contraseña"  required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="flavr-message"> Ingrese su nueva Contraseña:</div>'+
           '<div class="form-row">' +
-          '<input id="password1" type="password" name="password1" maxlength="8"  onchange="return validaContrasenia(this.id)" ' +
+          '<input id="password1" type="password" name="password1" onchange="return validaContrasenia(this.id)" ' +
           'placeholder="Nueva Contraseña"  required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="flavr-message"> Confirme su nueva Contraseña:</div>'+
           '<div class="form-row">' +
-          '<input id="password2" type="password" maxlength="8" name="password2" ' +
+          '<input id="password2" type="password" name="password2" ' +
           'placeholder="Confirme Contraseña" required /> <p class="help-block"></p>' +
           '</div>' +
           '<div class="form-row">' +
@@ -141,7 +138,7 @@ function login(stringvalue){
         dialog      : 'form',
         form        : {  content: html, method: 'get'},
         buttons : {
-        submit  : { text: 'Iniciar', style: 'danger', addClass: 'submit-btn', id: 'btn_iniciar',
+        submit  : { text: 'Aceptar', style: 'success', addClass: 'submit-btn', id: 'btn_iniciar',
                     action: function( $container, $second, $third ){
                       var bandValid = 0;
                       var msgError = "";
@@ -172,8 +169,6 @@ function login(stringvalue){
 
                       }
 
-
-
                       if(bandValid == 1){
 
                           mensaje_cisc( "error", msgError);
@@ -182,8 +177,8 @@ function login(stringvalue){
                       }else{
 
                          $.ajax({
-                             url:   '{{path('admin_academico_ingreso_nuevo_pass')}}',
-                             data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'pass2':$("#password2").val()},
+                            url:   '{{path('admin_academico_ingreso_nuevo_pass')}}',
+                            data: {'user': $("#usuario").val(),'pass': $("#password").val(),'pass1': $("#password1").val(),'pass2':$("#password2").val()},
 
                              type:  'post',
 
@@ -196,13 +191,13 @@ function login(stringvalue){
                                   mensaje_cisc( "error", "En estos momentos tenemos problemas con los servidores, lamentamos los inconvenientes");
                              },
                              success:  function (dataResponse) {
-
+                              //alert(dataResponse);
                           
-                               var codigo = JSON.parse(dataResponse).Codigo;
-                               var mensaje = JSON.parse(dataResponse).Mensaje;
+                               var codigo = JSON.parse(dataResponse).Codigo[0];
+                               var mensaje = JSON.parse(dataResponse).Mensaje[0];
 
 
-                              if (codigo == "0") {
+                              if (codigo == "1") {
                                 mensaje_cisc( "notice", "Contraseña cambiada correctamente");
                               }
                               else{
@@ -215,12 +210,11 @@ function login(stringvalue){
 
                         return false;
                     }
+        
         },
-        close   : { style: 'default' }
+        Recuperar: { text: 'Salir',id:'salir', style: 'danger', action: function(){ this.animate('fadeOutDown'); location.href = '{{path('titulacion_sis_academico_ingresar')}}'; return false }}
 
     }
-
-
     });
     }
     $("#iniciar").hide();
