--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
@@ -1,7 +1,7 @@
 {% if (banderaMatricula==4 )%}
 
     <div class="col-lg-12">
-            <b>{{ estudiante }}</b> Usted se encuentra matriculado en las siguientes materias:
+            <b>{{ estudiante }}</b> Usted se encuentra <b>INSCRITO</b> en las siguientes materias:
             <table class="table table-striped table-bordered" id ="">
                      <thead>
                         <tr>
@@ -23,13 +23,26 @@
                                 <td align="center">{{ dato.Nombre }}</td>
                                 <td align="center">{{ dato.Veces }}</td>
                                 <td align="center">{{ dato.Curso }}</td>
-                                <td align="center"><input type="button" name="btn_{{ dato.IdMateria }}" id="btn_{{ dato.IdMateria }}" value="Anular" /></td>
+                                <td align="center">
+                                {% if (dato.IdEstado==0) and (dato.Veces==1) %}
+                                <input type="button" name="btn_{{ dato.IdMateria }}" id="btn_{{ dato.IdMateria }}" value="Anular" />
+                                {% endif %}
+                                 {% if (dato.IdEstado!=0) and (dato.Veces==1)%}
+                                    <div style="color: blue;">Esta materia esta en PROCESO de anulación</div>
+                                {% endif %}
+                                 {% if (dato.Veces==2)%}
+                                    <div style="color: red;">Esta materia NO puede ser anulada</div>
+                                {% endif %}
+                                {% if (dato.Veces==3)%}
+                                    <div style="color: red;">Esta materia NO puede ser anulada</div>
+                                {% endif %}
+                               </td>
                                 <td align="center"><div id="contenedor_{{ dato.IdMateria }}"></div></td>
                             </tr>
                         {% endfor %}
                 <tfoot>
                     <tr>
-                        <td colspan=5 align="right">
+                        <td colspan="7" align="right">
                             <!--input type="submit" name="Generapdf" id="btngenpdfmat" value="Imprimir Documento"></td-->
                         </td>
                     </tr>
