--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listadoAlumnosMateria.html.twig
@@ -57,7 +57,6 @@
       
       #selectorFechasAsistencia {
          padding-top: 6px;
-{#         position: absolute;#}
          border-bottom: 1px solid;
          margin-bottom: 10px;
          margin-left: auto;
@@ -95,11 +94,22 @@
       .periodosAsistencia {
          padding-left: 0px;
          padding-right: 0px;
+         margin-top: 5px
+      }
+      
+      .periodosAsistencia i{
+         float: left;
+         margin-top: 5px;
+         margin-right: 1px;
       }
       
       /*dataTables*/
       #listadoAsistenciaMateria_wrapper {
          width: 98%;
+      }
+      
+      .botonesExport{
+         text-align: right;
       }
    </style>
 	<div class="col-lg-12">
@@ -112,13 +122,14 @@
 			<div class="table-responsive">
             
             <div id="selectorFechasAsistencia" class="col-lg-12">
-               <div class="col-lg-12">
-                  <div class="col-lg-3" style="padding-top: 5px;">Seleccionar Fechas:</div>
+               <div class="col-lg-8">
+                  <div class="col-lg-3" style="padding-top: 5px; display: block !important; text-align: center;">Seleccionar Fechas:</div>
                   <div class="col-lg-2"><input id="fechasAsistenciasDesde" style="width: 96px;" class="input-sm" type="text" value="" /></div>
                   <div class="col-lg-1" style="padding-top: 5px;">hasta</div>
                   <div class="col-lg-2"><input id="fechasAsistenciasHasta" style="width: 96px;" class="input-sm" type="text" value="" /></div>
                   <div class="col-lg-2"><button id="consultaAsistencia" class="btn btn-primary" type="button">Consultar</button></div>
                   <div class="col-lg-2 periodosAsistencia">
+                     <i class="fa fa-fw fa-calendar"></i>
                      <select id="periodosSelectAsistencia">
                         <option value="">Selec. Rango</option>
                         <option value="semanaActual">Semana Actual</option>
@@ -126,9 +137,10 @@
                         <option value="cicloActual">Ciclo Actual</option>
                      </select>
                   </div>
-                  <div class="col-lg-2 botonesExport"></div>
                </div>
-            </div>                  
+               <div class="col-lg-4 botonesExport"><a id="exportaAsistencias" class="btn btn-success" href="{{ path('docentes_asistencias_crear_xls',{ 'idCarrera':dataMateria.datosConsultaActual.idCarrera, 'idParalelo':dataMateria.datosConsultaActual.idParalelo, 'idMateria':dataMateria.datosConsultaActual.idMateria, 'idParalelo':'0','fechaInicio':dataMateria.datosConsultaActual.fechaInicio, 'fechaFin':dataMateria.datosConsultaActual.fechaFin}) }}" target="_blank"><i class="fa fa-fw fa-save"></i> Exportar Listado Actual</a></div>
+            </div>
+            {% if dataMateria.datosAsistencia is iterable %}
 				<table id="listadoAsistenciaMateria_{{dataMateria.idMateria}}" class="table table-striped table-bordered">
 					<thead>
 					  <tr>
@@ -157,6 +169,11 @@
 					{% endfor %}
 					</tbody>
 				  </table>
+            {% else %}
+               <div class="col-lg-12">
+                  Se presentaron problemas para mostrar el listado de alumnos.
+               </div>
+            {% endif %}
 				</div>
 				<!-- /.table-responsive -->
 			</div>
