--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -35,3 +35,19 @@
 .panel-yellow {border-color: #f0ad4e;}
 .fa-5x {font-size: 3em !important;}
 .h3, h3 {font-size: 130%;margin-top: 10px;margin-bottom: 10px;}
+
+a.tip:hover {cursor: hand;position: relative;}
+a.tip span {display: none;color:#000;}
+a.tip:hover span {
+    border: #c0c0c0 1px dotted;
+    padding: 5px 15px 5px 5px;
+    display: block;
+    z-index: 100;
+    background: url(../images/status-info.png) #f0f0f0 no-repeat 100% 5%;
+    right: 0px;
+    margin: 10px;
+    width: 250px;
+    position: absolute;
+    top: 20px;
+    text-decoration: none
+}
