--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -37,7 +37,7 @@
                           {% else %}
                                 {% set colorevent = color[1] %}
                           {% endif %}
-                            <div ondblclick="inactivar_evento(this)" id="evento_drag" name="{{event.codigo}}"  class="external-event" style="background-color: {{colorevent}}">{{color[0]}}</div>
+                            <div ondblclick="inactivar_evento(this)" id="{{color[0]}}" name="{{event.codigo}}"  class="external-event" style="background-color: {{colorevent}}">{{color[0]}}</div>
                       {% endfor %}
 
                       <!-- </div> -->
@@ -130,9 +130,11 @@
         }
 
         function inactivar_evento(evet){
-                alert($(evet).attr("name"));
+                $(evet).attr("name");
+                // alert($(evet).attr("id"));
+                // $("#titulo").val($(evet).attr("id"));
             var html =                '   <div class="form-row">' +
-                '       <input type="text" name="titulo" ' +
+                '       <input id="titulo" type="text" name="titulo" ' +
                 '       placeholder="Título" />' +
                 '   </div>' +
                 '   <div class="form-row">' +
@@ -148,29 +150,32 @@
                 var entrance = select.find('.animate-entrance :selected').text();
                 var closing = select.find('.animate-closing :selected').text();
 
-
                 new $.flavr({
                     title       : 'Editar Evento',
                     content     : '',
                     dialog      : 'form',
                     form        : { content: html, method: 'post' },
                     onSubmit    : function( $container, $form ){
-                         $.ajax({
-                            url: '',
-                            data: 'type=changetitle&title='+title+'&eventid='+event.id,
-                            type: 'POST',
-                            dataType: 'json',
-                            success: function(response){
-                              if(response.status == 'success')
-                                      $('#calendar').fullCalendar('updateEvent',event);
-                            },
-                            error: function(e){
-                              alert('Error processing your request: '+e.responseText);
-                            }
-                          });
+                        $.post('', {param1: 'value1'}, function(data, textStatus, xhr) {
+                          /*optional stuff to do after success */
+                        });
+                         // $.ajax({
+                         //    url: '',
+                         //    data: 'type=changetitle&title='+title+'&eventid='+event.id,
+                         //    type: 'POST',
+                         //    dataType: 'json',
+                         //    success: function(response){
+                         //      if(response.status == 'success')
+                         //              $('#calendar').fullCalendar('updateEvent',event);
+                         //    },
+                         //    error: function(e){
+                         //      alert('Error processing your request: '+e.responseText);
+                         //    }
+                         //  });
                         return false;
                     }
                 });
+$("#titulo").val($(evet).attr("id"));
         }
     </script>
     
