--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_carrera.html.twig
@@ -37,7 +37,7 @@
                           {% else %}
                                 {% set colorevent = color[1] %}
                           {% endif %}
-                            <div ondblclick="inactivar_evento(this)" id="{{color[0]}}" name="{{event.codigo}}"  class="external-event" style="background-color: {{colorevent}}">{{color[0]}}</div>
+                            <div ondblclick="inactivar_evento(this)" id="{{color[0]}}" name="{{event.id_parametro}}"  class="external-event" style="background-color: {{colorevent}}">{{color[0]}}</div>
                       {% endfor %}
 
                       <!-- </div> -->
