--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -84,7 +84,7 @@
                 </li>
               </ul>
             </li>
-            <li class="footer"><a href="{{ path('dayscript_notificaciones') }}">Ver Todos los eventos</a></li>
+            <li class="footer"><a href="{{ path('dayscript_eventos') }}">Ver Todos los eventos</a></li>
           </ul>
         </li>
 
