--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/mensajes_universidad.html.twig
@@ -28,114 +28,18 @@
 				        </thead>
 				        <tbody>
                    
-                            <tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr>
-                             <tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                               <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                               <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                               <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                                <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr><tr>
-                                <td>Notifiación</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                               <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr>
-                            <tr>
-                                <td>Mensaje</td>                               
-                                <td>No hay Clases</td>
-                                <td>El Sabado 7 de agosto no hay clases ...</td>
-                              <td style="text-align: center">13/09/2015</td>
-                                 <td style="text-align: center">  <a href="#">
-                                         <i class="fa fa-envelope-o"></i>                                                           
-                                                        </a></td>
-                            </tr>                            
-                            
+                            {% for Mensajes in data.Mensajes %} 
+                                <tr>
+                                    <td>{{ Mensajes.tipo_mensaje }}</td>                               
+                                    <td>{{ Mensajes.asunto }}</td>
+                                    <td>{{ Mensajes.mensaje }}</td>
+                                    <td style="text-align: center">{{ Mensajes.fecha_registro }}</td>
+                                    <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
+                                    <i class="fa fa-envelope-o"></i>                                                           
+                                    </a></td>
+                                </tr>
+                            {%endfor%}
+                             
                             
                                                               
                     </tbody>
