--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/notificaciones_universidad.html.twig
@@ -45,10 +45,10 @@
                                     <td>{{ Mensajes.mensaje }}</td>
                                     <td style="text-align: center">{{ Mensajes.fecha_registro }}</td>
                                     <td style="text-align: center">  <a href="#" id="Mensaje_1" name="Mensaje_1">
-                                    <i class="fa fa-envelope-o"></i>                                                           
-                                    </a></td>
+                                    <i class="fa fa-envelope-o"></i></a>
+                                    </td>
                                 </tr>
-                            {%endfor%}
+                          {%endfor%}
                             
                                                               
                     </tbody>
